--- a/admin/package.json
+++ b/admin/package.json
@@ -48,6 +48,7 @@
     "ember-cli": "~3.23.0",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.23.0",
+    "ember-cli-clipboard": "^0.15.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-google-fonts": "^2.16.2",
     "ember-cli-htmlbars": "^5.3.1",
